@@ -512,6 +512,8 @@ Version 1.5.1 -- CVS
     Issue is specific to sqBodyWrap() and string function wrappers introduced in 
     1.5.1.
   - MagicHTML fix for comments in styles.
+  - Added 'mail' and 'sn' attributes to address book LDAP backend search
+    expression (#1368154).
 
 Version 1.5.0 - 2 February 2004
 -------------------------------
